--- a/application/frontend/src/App.css
+++ b/application/frontend/src/App.css
@@ -16,6 +16,12 @@
   color: grey;
 }
 
+.dark-mode {
+  background-color: #333;
+  color: white;
+  transition: background-color 0.3s, color 0.3s;
+}
+
 .dark-mode .task-item {
   color: white;
 }
@@ -31,9 +37,9 @@
   margin-bottom: 10px;
 } */
 
-buttton {
-  background-color: blue;
-  color: lightblue;
+button {
+  background-color: grey;
+  color: whitesmoke;
   border: none;
   border-radius: 5px;
   padding: 5px 10px;
@@ -42,7 +48,7 @@ buttton {
 }
 
 button:hover {
-  background-color: #0284c7;
+  background-color: lightgray;
 }
 
 input [type='text'] {
@@ -50,6 +56,7 @@ input [type='text'] {
   border: 1px solid #ccc;
   border-radius:  5px;
   font-size: 1rem;
+  transition: background-color 0.3s, color 0.3s;
 }
 
 h1,p {
